--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     
-   background-image: url(img/Fondo.png);
+    background-color: #000;
     /*background: linear-gradient(to left, #000000, #434343); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #fff;
     font-family: 'Open Sans', sans-serif;
@@ -27,7 +27,6 @@ img {
     font-size: 15px;
     letter-spacing: 2px;   
     margin: 0;
-    
 }
 
 a.profile:hover{
@@ -72,7 +71,6 @@ a.profile:hover{
 a {
     color: white;
     transition: color 0.5s;
-    background: #1868B7;
 }
 
 a.links:hover {
@@ -98,6 +96,3 @@ a i:hover{
     font-weight: bold;
 }
 
-h2{
-    margin-top: -20px;
-}
